@startuml cursach

' ---- Стереотипы ----
!define MODEL <<Model>>
!define SERVICE <<Service>>
!define VIEWMODEL <<ViewModel>>
!define VIEW <<View>>
!define ENUM <<enumeration>>
!define INTERFACE <<interface>>

' ---- Интерфейсы ----
interface IEntity {
  + Id: int {get; set}
}

interface IWarehouseOperation {
  + ValidateStock(product: Product, requiredQuantity: int): (bool, string)
  + UpdateStock(product: Product, quantity: int)
}

interface IDataService {
  + GetOrders(): List<Order>
  + AddOrder(order: Order)
  + UpdateOrder(order: Order)
  + GetProducts(): List<Product>
  + GetProduct(id: int): Product
  + AddProduct(product: Product)
  + UpdateProduct(product: Product)
  + SaveToXml()
  + LoadFromXml()
}

' ---- Модели ----
class Order MODEL {
  + Id: int
  + Customer: string
  + Date: DateTime
  + Status: OrderStatus
  + Total: decimal
  + Paid: decimal
  + IsPaid: bool
  + Items: List<OrderItem>
  + PayFullAmount()
}

class OrderItem MODEL {
  + ProductId: int
  + Name: string
  + Price: decimal
  + Quantity: int
}

class Product MODEL {
  + Id: int
  + Name: string
  + Price: decimal
  + Stock: int
}

class Supplier MODEL {
  + Id: int
  + Name: string
  + Phone: string
}

' ---- Перечисление ----
enum OrderStatus {
  New
  Paid
  Completed
}

' ---- Сервисы ----
class DataService SERVICE {
  - _orders: List<Order>
  - _products: List<Product>
  - _nextOrderId: int
  - _nextProductId: int
  + GetOrders(): List<Order>
  + AddOrder(order: Order)
  + UpdateOrder(order: Order)
  + GetProducts(): List<Product>
  + GetProduct(id: int): Product
  + AddProduct(product: Product)
  + UpdateProduct(product: Product)
  + SaveToXml()
  + LoadFromXml()
}

class WarehouseService SERVICE {
  - _dataService: DataService
  + ValidateStock(product: Product, requiredQuantity: int): (bool, string)
  + UpdateStock(product: Product, quantity: int)
  + AddProductToOrder(order: Order, product: Product, quantity: int): (bool, string)
  + PayOrder(order: Order): (bool, string)
  + ShipOrder(order: Order): (bool, string)
}

' ---- ViewModel ----
class MainViewModel VIEWMODEL {
  - _dataService: DataService
  - _warehouseService: WarehouseService
  - _selectedOrder: Order
  - _selectedProduct: Product
  - _newProductName: string
  - _newProductPrice: decimal
  - _newProductStock: int
  - _statusMessage: string
  + Orders: ObservableCollection<Order>
  + Products: ObservableCollection<Product>
  + SelectedOrder: Order
  + SelectedProduct: Product
  + NewProductName: string
  + NewProductPrice: decimal
  + NewProductStock: int
  + StatusMessage: string
  + CreateOrder()
  + AddProductToOrder()
  + PayOrder()
  + ShipOrder()
  + AddNewProduct()
  + UpdateSelectedProduct()
  + DeleteOrder()
  + SaveData()
  + LoadDataFromFile()
  + OnPropertyChanged(propertyName: string)
}

' ---- View ----
class MainWindow VIEW {
  - _viewModel: MainViewModel
  + InitializeComponent()
  + CreateOrderClick()
  + AddProductClick()
  + PayOrderClick()
  + ShipOrderClick()
  + DeleteOrderClick()
  + AddNewProductClick()
  + UpdateProductClick()
  + SaveDataClick()
  + LoadDataClick()
  + UpdateOrderDetails()
  + UpdateProductEditFields()
  + OrdersList_SelectionChanged()
  + ProductsList_SelectionChanged()
  + CustomerTextBox_TextChanged()
}

' Композиция
Order *-- OrderItem

' Агрегация
DataService o-- Order
DataService o-- Product

' Реализация интерфейсов
Order ..|> IEntity
Product ..|> IEntity
Supplier ..|> IEntity
WarehouseService ..|> IWarehouseOperation
DataService ..|> IDataService

' Ассоциация
WarehouseService --> DataService
MainViewModel --> DataService
MainViewModel --> WarehouseService
MainWindow --> MainViewModel

' Зависимости
Order ..> OrderStatus
WarehouseService ..> Order
WarehouseService ..> Product

@enduml